fix covers block size changing after checking a checkbox

--- a/main.css
+++ b/main.css
@@ -292,9 +292,7 @@ h6 {
 .book-cover {
   border: 1px solid #676767;
   border-radius: 5px;
-  padding: 24px 0;
-  width: 247px;
-  height: 376px;
+  padding: 24px 16px;
 }
 .book-cover:hover {
   border-color: #212121;
