--- a/scss/components/_book-cover.scss
+++ b/scss/components/_book-cover.scss
@@ -4,10 +4,7 @@
     border: 1px solid vars.$color-gray; 
     border-radius: 5px;
 
-    padding: 24px 0;
-
-    width: 247px;
-    height: 376px;
+    padding: 24px 16px;
 
     &:hover {
         border-color: vars.$color-black;
